# rest_api_rust

./: .env.example  Cargo.toml  docker-compose.yml
src/: main.rs
src/user_router/: mod.rs
src/user_service/: mod.rs
